# auto-pppoe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.MD  README.md  get_devices.py  get_router_ip.py  pppoe.py  pyproject.toml  requirements-dev.txt  tplink_security_encode.py  utils.py
.github/workflows/: test.yml
apis/: __init__.py  check_isp.py  tplink_api.py
apis/routers/tplink/: tplink_api.py
config/: config.py
docs/: getting-started.md  how-it-works.md
docs/en/: mkdocs.yml
docs/en/docs/: how-it-works.md  index.md
pppoe_api/: apis.py
src/autodialer/: __init__.py  dhcp.py  get_devices.py  pppoe.py  reconnection.py
src/autodialer/apis/: __init__.py  check_isp.py  get_gateway.py
src/autodialer/apis/routers/: base_api.py
src/autodialer/apis/routers/asus/: __init__.py  asus_api.py
src/autodialer/apis/routers/tplink/: get_devices.py  tplink_api.py
src/autodialer/apis/routers/zte/: zte_api.py
src/autodialer/apis/utils/: check_isp.py  check_router_vendor.py  check_vendor.py  get_gateway.py  get_ip_address.py  get_vendor_api.py  is_target_asn.py  print_devices_table.py
src/autodialer/config/: config.py
src/autodialer/encode/: __init__.py  tplink_security_encode.py  zte_encode.py
test/: isp_check_test.py  test.py
tests/: __init__.py  test_asus_api.py  test_check_isp.py  test_check_vendor.py  test_get_gateway.py  test_get_vendor_api.py  test_pppoe.py  test_reconnection.py  test_tplink_api.py  test_zte_api.py
