[project]
name = "AutoDialer"
version = "0.2.0"
description = "AutoDialer is an automation script designed to interact with routers using APIs."
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1,<2",
    "requests<3",
]

[project.scripts]
autodialer = "autodialer.pppoe:main"
autodialer-devices = "autodialer.get_devices:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autodialer*"]
