[project]
name = "AutoDialer"
authors = [{name = "Byte Flow", email = "fakeshadow1337@gmail.com"}]
description = "AutoDialer is an automation script designed to interact with routers using APIs."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "python-dotenv>=1,<2",
    "requests<3",
]

[project.scripts]
autodialer = "autodialer.pppoe:main"
autodialer-devices = "autodialer.get_devices:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "autodialer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autodialer*"]
