[project]
name = "AutoDialer"
authors = [{name = "Byte Flow", email = "fakeshadow1337@gmail.com"}]
description = "AutoDialer is an automation script designed to interact with routers using APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dynamic = ["version"]
classifiers= [
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
dependencies = [
    "python-dotenv>=1,<2",
    "requests<3",
]

[project.urls]
Homepage = "https://github.com/ByteFlowing1337/AutoDialer"

[project.scripts]
autodialer = "autodialer.reconnection:main"
autodialer-devices = "autodialer.get_devices:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "autodialer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autodialer*"]
